[project]
name = "nebula-dgl"
version = "0.1.2"
description = "Lib for NebulaGraph integration with Deep Graph Library (DGL)."
authors = [
    {name = "Wey Gu", email = "weyl.gu@gmail.com"},
]
dependencies = [
    "nebula3-python",
]
readme = "README.md"
license = {text = "Apache-2.0"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
